--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ Tujuanku adalah terus berkembang dan membuat proyek-proyek yang bermanfaat sambi
   <p>Berikut beberapa proyek kecil yang telah saya buat sebagai latihan pengembangan web.</p>
 
   <div class="project-buttons">
-    <a href="form/form registrasi.html" class="btn">Form Registrasi</a>
+    <a href="form/form_registrasi.html" class="btn">Form Registrasi</a>
     <a href="game/catur.html" class="btn">Game HTML</a>
   </div>
 </section>
@@ -148,3 +148,4 @@ Tujuanku adalah terus berkembang dan membuat proyek-proyek yang bermanfaat sambi
 </body>
 
 </html>
+
