--- a/form/form_registrasi.html
+++ b/form/form_registrasi.html
@@ -27,10 +27,11 @@
 
         <button type="submit" class="btn">Daftar</button>
         <div class="register-link">
-            <p>Sudah Punya Akun? <a href="form login.html">Masuk</a></p>
+            <p>Sudah Punya Akun? <a href="form_login.html">Masuk</a></p>
         </div>
     </form>
    </div>
 
 </body>
+
 </html>
