--- a/form/form _login.html
+++ b/form/form _login.html
@@ -28,10 +28,11 @@
 
         <button type="submit" class="btn">Masuk</button>
         <div class="register-link">
-            <p>Tidak Punya Akun? <a href="form registrasi.html">Daftar</a></p>
+            <p>Tidak Punya Akun? <a href="form_registrasi.html">Daftar</a></p>
         </div>
     </form>
    </div>
 
 </body>
+
 </html>
